terraform/aws/modules/security_groups/rules.tf
resource "aws_security_group_rule" "nodes_from_gateway_nlb" {
  type                     = "ingress"
  from_port                = var.gateway_node_port
  to_port                  = var.gateway_node_port
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.gateway_nlb.id
  security_group_id        = var.pod_security_group_id
}

resource "aws_security_group_rule" "gateway_nlb_from_cloudfront" {
  type            = "ingress"
  from_port       = 80
  to_port         = 80
  protocol        = "tcp"
  prefix_list_ids = [data.aws_ec2_managed_prefix_list.cloudfront.id]

  security_group_id = aws_security_group.gateway_nlb.id
}

resource "aws_security_group_rule" "gateway_nlb_egress_all" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.gateway_nlb.id
}

resource "aws_security_group_rule" "rds_from_nodes" {
  type                     = "ingress"
  from_port                = 5432
  to_port                  = 5432
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.eks_nodes.id
  security_group_id        = aws_security_group.rds.id
}

resource "aws_security_group_rule" "cluster_to_nodes" {
  type                     = "ingress"
  description              = "Allow Control Plane to communicate with worker nodes"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.eks_nodes.id
  source_security_group_id = aws_security_group.eks_cluster.id
}

resource "aws_security_group_rule" "nodes_to_cluster_api" {
  type                     = "ingress"
  description              = "Allow nodes to communicate with EKS control plane"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.eks_cluster.id
  source_security_group_id = aws_security_group.eks_nodes.id
}

resource "aws_security_group_rule" "cluster_to_nodes_kubelet" {
  type                     = "ingress"
  description              = "Allow Control Plane to communicate with Kubelet"
  from_port                = 1025
  to_port                  = 65535
  protocol                 = "tcp"
  security_group_id        = aws_security_group.eks_nodes.id
  source_security_group_id = aws_security_group.eks_cluster.id
}

resource "aws_security_group_rule" "management_to_eks_api_nodes_sg" {
  type                     = "ingress"
  description              = "Allow management host to reach EKS private API endpoint on HTTPS"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.eks_nodes.id
  source_security_group_id = aws_security_group.management.id
}

resource "aws_security_group_rule" "management_to_eks_api_cluster_sg" {
  type                     = "ingress"
  description              = "Allow management host to reach EKS cluster primary SG on HTTPS"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.eks_cluster.id
  source_security_group_id = aws_security_group.management.id
}

resource "aws_security_group_rule" "endpoints_from_nodes_https" {
  type                     = "ingress"
  description              = "Allow EKS nodes to access interface VPC endpoints over HTTPS"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.vpc_endpoints.id
  source_security_group_id = aws_security_group.eks_nodes.id
}

resource "aws_security_group_rule" "endpoints_from_management_https" {
  type                     = "ingress"
  description              = "Allow management host to access interface VPC endpoints over HTTPS"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.vpc_endpoints.id
  source_security_group_id = aws_security_group.management.id
}

resource "aws_security_group_rule" "endpoints_egress_all" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.vpc_endpoints.id
}

resource "aws_security_group_rule" "nodes_internal_all" {
  type                     = "ingress"
  description              = "Allow nodes and pod ENIs to communicate with each other"
  from_port                = 0
  to_port                  = 0
  protocol                 = "-1"
  security_group_id        = aws_security_group.eks_nodes.id
  source_security_group_id = aws_security_group.eks_nodes.id
}

resource "aws_security_group_rule" "nodes_egress_all" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.eks_nodes.id
}

resource "aws_security_group_rule" "nodes_cilium_health_internal" {
  type                     = "ingress"
  description              = "Allow Cilium health checks between nodes"
  from_port                = 4240
  to_port                  = 4240
  protocol                 = "tcp"
  security_group_id        = aws_security_group.eks_nodes.id
  source_security_group_id = aws_security_group.eks_nodes.id
}

resource "aws_security_group_rule" "nodes_icmp_from_cluster" {
  type                     = "ingress"
  description              = "Allow ICMP for Cilium health monitoring"
  from_port                = -1
  to_port                  = -1
  protocol                 = "icmp"
  security_group_id        = aws_security_group.eks_nodes.id
  source_security_group_id = aws_security_group.eks_cluster.id
}

resource "aws_security_group_rule" "management_egress_all" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.management.id
}

resource "aws_security_group_rule" "cluster_egress_all" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.eks_cluster.id
}

resource "aws_security_group_rule" "endpoints_from_cluster_https" {
  type                     = "ingress"
  description              = "Allow EKS cluster SG to access interface VPC endpoints over HTTPS"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.vpc_endpoints.id
  source_security_group_id = aws_security_group.eks_cluster.id
}
resource "aws_security_group_rule" "endpoints_from_pod_traffic" {
  type                     = "ingress"
  description              = "Allow EKS Primary Cluster SG (Pod traffic) to access VPC endpoints"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.vpc_endpoints.id
  source_security_group_id = var.pod_security_group_id
}
